deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geonovum-testbed
  labels:
    app.kubernetes.io/part-of: geonovum-sta-translation
